Make sure link color works in both light and dark mode

--- a/uu-workshop/src/index.css
+++ b/uu-workshop/src/index.css
@@ -15,7 +15,8 @@ body {
 a {
   min-height: 44px; /* WCAG 2.5.5: target size; */
   line-height: 44px;
-  color: #0d47a1; /* #f3f3ff; */ /*  WCAG2AAA.Principle1.Guideline1_4.1_4_6.G17 */
+
+  /* color: #f3f3ff;  WCAG2AAA.Principle1.Guideline1_4.1_4_6.G17 */
 }
 
 .visuallyhidden {
